
=== Enhancements ===

* Hash-based checks to update SMW data rather than the delete-insert method used before
* Different tables for different datatypes leading to less storage wastage, better query performance
: and improved access methods
* Highly optimized Special pages Special:Properties,Special:UnusedProperties
* Refactored code uses DIHandlers class for Database abstraction for each DataItem
* Splitted the SQLStore into SQLStore3_Writers, SQLStore3_Readers, SQLStore3_SpecialPageHandlers and SQLStore_SetupHandler,
: while keeping the commonly used functions in SQLStore3
* Made query link generation completely generic. Links for all formats will now contain
: all provided arguments.
* Improved JSON export (bug 37418).
* Improved Special:Ask UI.
* Added tests for the query processor, the store, data items and result printers,
: including base test classes for the later two that can be used by extensions.
* No more inline CSS and JavaScript on special pages (now all resource loader modules).
* Added SMWExportPrinter class to facilitate creating export printers and simplify handling code.
* Added SMWIResultPrinter interface to type hint result printers against.
* Added continuation support to the Ask API.
* Migrated Validator parameter definitions to new Validator 0.5 array style.

=== Dropped features ===

* Special:QueryCreator got disabled pending fixes.

=== Bug fixes ===

* Fixed automatic running of SMW updating script when running maitenance/update.php.
* Fixed page parameter handling on Special:ExportPDF (bug 35180).
* Fixed handling of #set_recurring_event for 'month' and 'year' time units.
* Fixed error on Special:URIResolver (bug 35643).
* Fixed alternative query source ($smwgQuerySources) (bug 38292).
* Fixed getMaxIncludeSize() on a non-object error in Special:Ask (bug 40650)

=== Extended translations ===

As usual, translations have been extended thanks to the [[Translatewiki.net|Translatewiki.net project]].