@@ -47,6 +47,7 @@ production until the actual release.
 * Fixed page parameter handling on Special:ExportPDF (bug 35180).
 * Fixed handling of #set_recurring_event for 'month' and 'year' time units.
 * Fixed error on Special:URIResolver (bug 35643).
+* Fixed 'badtitle' error on Special:URIResolver (bug 39967).
 * Fixed alternative query source ($smwgQuerySources) (bug 38292).
 * Fixed getMaxIncludeSize() on a non-object error in Special:Ask (bug 40650)
 
